# intelligent_insurance_agent

./: README.md  main.py  pyproject.toml
src/intelligent_insurance_agent/: __init__.py  agent.py  api.py  llm.py  main.py
src/intelligent_insurance_agent/Api/: __init__.py  chat.py  documents.py  health.py  rag.py  upload.py
src/intelligent_insurance_agent/Core/: .env  prompts.py
src/intelligent_insurance_agent/Database/: database.py  seed.py
src/intelligent_insurance_agent/Model/: chat.py  document.py
src/intelligent_insurance_agent/RAG/: chain.py  embedding.py  loader.py  retriever.py  splitter.py  vectorstore.py
src/intelligent_insurance_agent/static/: index.html
tests/: test_agent.py  test_api.py  test_main.py
uploads/: README.md
